@@ -37,6 +37,7 @@ subprojects {
 
     tasks.test {
         useJUnitPlatform()
+        jvmArgs("--enable-native-access=ALL-UNNAMED")
     }
 
     tasks.withType<JavaCompile> {
